# gcd_talker

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: release.yaml
gcd/: gcd.py
gcd_talker/: gcd.py
