[metadata]
name = comictagger_gcd_talker
description = A Grand Comics Database API talker for ComicTagger a cross-platform GUI/CLI app for writing metadata to comic archives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/comictagger/comictagger-gcd-talker
author = ComicTagger team
author_email = comictagger@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities
keywords =
    comictagger
    GCD
    Grand Comics Database
    comics
    comic
    metadata
    tagging
    tagger

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude = tests; testing

[options.entry_points]
comictagger.talker =
    gcd = gcd_talker.gcd:GCDTalker
